--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,10 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : "dark"
-    # "light" (default),
+    colorscheme          : # "light" (default),"dark"
+theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "dark"
+   
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
